--- a/package.json
+++ b/package.json
@@ -8,15 +8,30 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "server": "nodemon server/server.js"
+    "server": "nodemon server/server.js",
+    "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.13.13",
+    "babel": "^6.23.0",
+    "babel-jest": "^26.6.3",
+    "babel-preset-react": "^6.24.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "faker": "^5.5.3",
+    "jest": "^26.6.3",
     "mongoose": "^5.12.7",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2"
   },
   "devDependencies": {
-    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor"
+    "@babel/core": "^7.14.2",
+    "@babel/preset-env": "^7.14.2",
+    "babel-loader": "^8.2.2",
+    "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   }
 }
