--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^4.17.1",
     "faker": "^5.5.3",
     "jest": "^26.6.3",
+    "jquery": "^3.6.0",
     "mongoose": "^5.12.7",
     "nodemon": "^2.0.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.2",
