--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=6.13.0"
   },
   "scripts": {
-    "start": "PORT=3000 node server/server.js",
+    "start": "node server/server.js",
     "server": "nodemon server/server.js",
     "test": "jest",
     "seed-db": "node ./server/data/generateData.js",
